' Shishoza — UPDATED ER Diagram (adds CITIZENS + REQUESTS; reconciled to live schema)
@startuml Shishoza_ERD
hide circle
skinparam linetype ortho

entity USERS {
  * user_id : PK
  --
  email
  password_hash
  role
  district_scope
}

entity CITIZENS {
  * citizen_id : PK
  --
  email
  password_hash
  full_name
  phone
  created_at
  last_login
}

entity ANALYSIS_CACHE {
  * analysis_id : PK
  --
  lat, lng, area_ha
  risk_level
  data_source
}

entity SIMULATION_RUNS {
  * sim_id : PK
  --
  analysis_id : FK
}

entity REQUESTS {
  * request_id : PK
  --
  created_at
  citizen_email : FK (logical -> CITIZENS)
  citizen_name, citizen_phone
  upi, district, sector, sector_id
  lat, lng, area_ha
  risk_level, parcel_risk, neighbourhood_risk
  tree_cover_pct, deforestation_prob
  analysis_id : FK (-> ANALYSIS_CACHE)
  reason
  status
  reviewed_by : FK (-> USERS)
  reviewed_at, review_note
}

entity ALTERNATIVES {
  * alt_id : PK
  --
  reason, risk_level, language
  suggestion_text, gov_program_url
}

USERS          ||--o{ REQUESTS        : reviews
CITIZENS       ||--o{ REQUESTS        : submits
ANALYSIS_CACHE ||--o{ REQUESTS        : from
ANALYSIS_CACHE ||--o{ SIMULATION_RUNS : has

note bottom of REQUESTS
  NEW vs report (was "6 entities"): +CITIZENS, +REQUESTS  -> 6 entities.
  Reconcile: live DB has ANALYSIS_CACHE (not PARCEL_ANALYSES) and NO
  SECTORS / MODEL_VERSIONS tables (GeoJSON file + .pkl, not tables).
  predictions_log.csv is a flat monitoring FILE, not a table.
end note
@enduml
